--- a/faststi/templates/faststi/faststi.css
+++ b/faststi/templates/faststi/faststi.css
@@ -23,18 +23,14 @@
   background-color: #f1f1f1;
 }
 
-#simulate-button {
-    margin-top: 12px;
-}
-
-#id_initial_infections_data_source {
+.source-selector ul {
     list-style: none;
     padding: 0;
 }
 
-#id_initial_infections_data_source li,
-#id_initial_infections_data_source label {
-    display: inline;
+.source-selector li,
+.source-selector label {
+    display: inline !important;
 }
 
 .source-selector {
@@ -43,4 +39,8 @@
 
 .file-parms {
     display: none;
+}
+
+#simulate-button {
+    margin-top: 12px;
 }
